; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/q3_ui/extr_ui_spskill.c_UI_SPSkillMenu_Key.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/q3_ui/extr_ui_spskill.c_UI_SPSkillMenu_Key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@K_MOUSE2 = common dso_local global i32 0, align 4
@K_ESCAPE = common dso_local global i32 0, align 4
@skillMenuInfo = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@CHAN_ANNOUNCER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @UI_SPSkillMenu_Key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @UI_SPSkillMenu_Key(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @K_MOUSE2, align 4
  %5 = icmp eq i32 %3, %4
  br i1 %5, label %10, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = load i32, i32* @K_ESCAPE, align 4
  %9 = icmp eq i32 %7, %8
  br i1 %9, label %10, label %14

10:                                               ; preds = %6, %1
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @skillMenuInfo, i32 0, i32 1), align 4
  %12 = load i32, i32* @CHAN_ANNOUNCER, align 4
  %13 = call i32 @trap_S_StartLocalSound(i32 %11, i32 %12)
  br label %14

14:                                               ; preds = %10, %6
  %15 = load i32, i32* %2, align 4
  %16 = call i32 @Menu_DefaultKey(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @skillMenuInfo, i32 0, i32 0), i32 %15)
  ret i32 %16
}

declare dso_local i32 @trap_S_StartLocalSound(i32, i32) #1

declare dso_local i32 @Menu_DefaultKey(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
